--- a/Minimal.DataAccess/Minimal.DataAccess.csproj
+++ b/Minimal.DataAccess/Minimal.DataAccess.csproj
@@ -11,6 +11,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.7" />
+    <PackageReference Include="Dapper" Version="2.0.35" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,4 +23,7 @@
     <Folder Include="Data\Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="Minimal.DataAccess.csproj" />
+  </ItemGroup>
 </Project>
