--- a/Minimal/Minimal.csproj
+++ b/Minimal/Minimal.csproj
@@ -20,6 +20,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="CloudinaryDotNet" Version="1.12.0" />
   </ItemGroup>
 
 
