--- a/Minimal/appsettings.json
+++ b/Minimal/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "draakmoik",
+    "ApiKey": "846283755314165",
+    "ApiSecret": "V6cen91eu7-ZZclrbXrOsDqE-sA"
+  }
 }
